--- a/style.css
+++ b/style.css
@@ -53,3 +53,18 @@ body {
   bottom: 10px;
   right: 10px;
 }
+
+/* main content */
+
+#content {
+  background-color: #f3f3f3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 62%;
+}
+
+#signup-form {
+  background-color: white;
+  box-shadow: 0 3px 8px gray;
+}
