Lay out main content

--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
 /* general */
 
+:root {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-weight: 500;
+  font-size: 1.3rem;
 }
 
 button,
@@ -57,14 +70,55 @@ body {
 /* main content */
 
 #content {
-  background-color: #f3f3f3;
+  background-color: #fafafa;
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 62%;
 }
 
-#signup-form {
+#content > * {
+  padding: 2rem 3rem;
+}
+
+#content h3:not(:last-child),
+div button:first-child {
+  margin-bottom: 1.4rem;
+}
+
+/* form */
+
+#input {
   background-color: white;
-  box-shadow: 0 3px 8px gray;
+  box-shadow: 0 3px 12px lightgray;
+}
+
+#signup-form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.25rem;
+}
+
+.form-row {
+  margin-right: 2rem;
+}
+
+.form-row label {
+  display: block;
+  font-size: .75rem;
+  text-transform: uppercase;
+  margin-bottom: 0.25rem;
+}
+
+.form-row input {
+  height: 1.7rem;
+}
+
+#submit button,
+.form-row input {
+  width: 14rem;
+}
+
+#submit button {
+  height: 2.5rem;
 }
